# Geospatial-Analysis-Integrity-Tool

./: CMakeLists.txt  CompilingInstructions.txt
GAIT 26 Source/: share.h
